custom scrollbars, fixed note modification so it renders onSnapshot, added creationTime to noteboard and note documents

--- a/styles/RoundButton.module.scss
+++ b/styles/RoundButton.module.scss
@@ -8,7 +8,7 @@
   height: 48px;
   background: $primary;
   border-radius: 100px;
-  box-shadow: $shadow-2;
+  box-shadow: $shadow-1;
 
   &:hover{
     background: darken($primary, $darken-percentage);
